add custom simple auth
